tests/diagnostics/duplicate_type_param.kal
# Type parameters in one list must be distinct.
fn f<T, T>(a: T, b: T) -> T = b;
